[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "provenant"
version = "0.1.0"
description = "Epistemic memory layer for LLM apps: tag memories by origin and demote model-made-up facts below grounded ones at retrieval time."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["llm", "memory", "rag", "provenance", "hallucination", "confabulation", "agents"]
authors = [{ name = "Provenant contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # core is pure stdlib — a neutral adapter, not a heavy store

[project.optional-dependencies]
dev = ["pytest>=7"]
# the LongMemEval/LOCOMO retrieval benchmark needs a real embedder + numpy
bench = ["fastembed>=0.3", "numpy>=1.21", "huggingface_hub>=0.20"]

[project.urls]
Homepage = "https://github.com/IsaacClarke2/provenant"
Repository = "https://github.com/IsaacClarke2/provenant"
Issues = "https://github.com/IsaacClarke2/provenant/issues"

[tool.setuptools.packages.find]
include = ["provenant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
